--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,7 +68,25 @@ article {
     font-size: 1.5rem;
     margin: 0; }
   article p {
-    margin: 0; }
+    margin: 0;
+    font-size: 1.3em; }
+  article.session h1 {
+    font-size: 2.1em; }
+  article.session .speaker {
+    font-size: 1.7em;
+    margin-bottom: 10px;
+    color: #c2c2c2; }
+  article.session .description {
+    font-size: 1.5em;
+    line-height: 1.7; }
+  article.session img {
+    max-width: 100%;
+    float: right;
+    margin: 0 10px 10px 10px;
+    border: 1px solid #ff8a00;
+    -moz-box-shadow: 3px 3px 5px #333333;
+    -webkit-box-shadow: 3px 3px 5px #333333;
+    box-shadow: 3px 3px 5px #333333; }
 
 body > footer {
   background-color: #45484d;
