--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,7 +6,7 @@ $grey: #c2c2c2;
 
 $bodyfont: 'Segoe Light', "Helvetica Neue", Helvetica, 'Arial', sans-serif;
 $headingfont: 'Segoe Semibold', "Helvetica Neue", Helvetica, 'Arial', sans-serif;
-
+@import 'all';
 
 body{
 	margin: 0;
@@ -107,6 +107,31 @@ article{
 	}
 	p{
 		margin: 0;
+		font-size: 1.3em;
+		
+	}
+	
+
+	&.session{
+		h1{
+			font-size: 2.1em;
+		}
+		.speaker{
+			font-size: 1.7em;
+			margin-bottom: 10px;
+			color: $grey;
+		}
+		.description{
+			font-size: 1.5em;
+			line-height: 1.7;
+		}
+		img{
+			max-width: 100%;
+			float: right;
+			margin: 0 10px 10px 10px;
+			border: 1px solid $orange;
+			@include box-shadow (3px, 3px, 5px, #333333);
+		}
 	}
 }
 
